<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/llButtons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/blue01"
        >


        <Button
            android:id="@+id/bPrev"
            android:text="@string/icon_arrow_left"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@drawable/pressed_button"

            />

        <TextView
            android:id="@+id/tvPages"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:textSize="16sp"
            android:padding="10dp"
            android:layout_alignParentTop="true"
            android:layout_weight="1"/>


        <Button
            android:id="@+id/bNext"
            android:text="@string/icon_arrow_right"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/pressed_button"

            />

    </LinearLayout>



    <TextView
        android:id="@+id/tvRecycleIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textColor="@color/emerald"
        android:visibility="gone"
        android:text="@string/icon_recycle"
        android:textSize="50dp"
        />


    <ListView
        android:id="@+id/lvQuestions"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:listSelector="@color/blue14"
        android:cacheColorHint="@android:color/transparent"
        android:dividerHeight="1dp"
        android:footerDividersEnabled="true"
        android:headerDividersEnabled="true"
        android:layout_above="@id/llButtons"
        />



</RelativeLayout>