<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_marginTop="75dp"
        android:layout_marginBottom="25dp"
        android:src="@drawable/logo"/>


    <TextView
        android:id="@+id/tvFeedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/tvTitle"
        android:textColor="@color/red01"
        android:gravity="center"
        android:textSize="20sp"
        android:visibility="invisible"/>

    <LinearLayout
        android:id="@+id/fields"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTitle"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_marginTop="15dp">

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:inputType="textEmailAddress"
            android:hint="@string/username_hint" />

        <EditText
            android:id="@+id/etPass"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:padding="10dp"
            android:hint="@string/password_hint" />

    </LinearLayout>

    <Switch
        android:id="@+id/sRememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/fields"
        android:textColor="#000000"
        android:layout_marginTop="20dp"
        android:text="Stay Logged In?" />


    <TextView
        android:id="@+id/tvPassRecover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/sRememberMe"
        android:layout_marginTop="20dp"
        android:text="@string/recover_pw"
        android:textColor="#1C86EE"
        android:clickable="true"
        android:textSize="18dp" />



</RelativeLayout>